main.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "${var.env_prefix}-vpc"
  }
}

resource "aws_subnet" "public" {
  count = length(var.public_subnet_cidr)

  vpc_id     = aws_vpc.main.id
  cidr_block = var.public_subnet_cidr[count.index]

  tags = {
    Name = "${var.env_prefix}-pub_sub${count.index + 1}"
  }
}



resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidr)

  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidr[count.index]
  tags = {
    Name = "${var.env_prefix}-private_sub${count.index + 1}"
  }
}



resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${var.env_prefix}-int_gate"
  }
}
resource "aws_eip" "nat" {
  count = length(var.private_subnet_cidr)

  vpc = true
  tags = {
    Name = "${var.env_prefix}-nat${count.index}"
  }
}




resource "aws_nat_gateway" "main" {
  count = length(var.public_subnet_cidr)

  allocation_id = aws_eip.nat[count.index].id
  subnet_id     = aws_subnet.public[count.index].id

  tags = {
    Name = "${var.env_prefix}-nat${count.index}"
  }
}



resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "${var.env_prefix}"
  }
}

resource "aws_route_table" "private" {
  count  = length(var.private_subnet_cidr)
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main[count.index].id
  }

  tags = {
    Name = "${var.env_prefix}-private-rt"
  }
}



resource "aws_route_table_association" "public" {
  count = length(var.public_subnet_cidr)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id

}


resource "aws_route_table_association" "private" {
  count = length(var.private_subnet_cidr)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id

}
